[package]
authors = ["Joern Barthel <joern@barthel.digital>"]
categories = ["cryptography"]
description = "Expiring, signed identifier with optional AAD"
edition = "2024"
license = "MIT"
name = "idtk"
repository = "https://github.com/yawn/idtk"
version = "0.1.1"

[dependencies]
fast32 = { version = "1.0", optional = true }
ring = "0.17"
thiserror = "2"
time = "0.3"

[features]
base32 = ["dep:fast32"]
base64 = ["dep:fast32"]
